# gamut_viewer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  conanfile.py  conanfile.txt  setup.py
doc/: README.md
doc/software/c4/: context.drawio
gamut_viewer/: color.cpp  color.hpp  common.hpp  conventions.cpp  conventions.hpp  forward.frag  forward.vert  image.cpp  image.hpp  main.cpp  opengl_context.cpp  opengl_context.hpp  triangle_mesh.cpp  triangle_mesh.hpp  window.cpp  window.hpp  wireframe.frag  wireframe.geom  wireframe.vert
glad/: glad.c  glad.h
test/: gradients.cpp
